--- a/estilo.css
+++ b/estilo.css
@@ -1,45 +1,80 @@
 body {
-  background: rgb(0, 0, 0)
+  margin: 0;
+  padding: 0;
 }
 h1 {
   text-align: center;
 }
-p {
-  color: white;
-}
 .caixa1 {
-position: relative;
-background-color: rgb(255, 255, 255);
-width: 100%;
-height: 200px;
-color: cadetblue;
-left: 35%;
+   position: relative;
+   background: rgb(29, 4, 121);
+   width: 200px;
+   height: 200px;
+   color: #14d8df;
+   left: 50%;
 }
-.MenuPrincipal {
-position: relative;
-background-color: rgb(0, 0, 0)244);
-width: 100%;
-height: 45px;
-top: 0pt;
+.menuPrincipal {
+  position: absolute;
+  background: #19fafa;
+  width: 100%;
+  height: 45px;
+  top: 0pt;
+  left: 0;
 }
-nav ul {
+nav ul {  
   list-style-type: none;
-  margin: 0%;
-  padding: 0%;
-  overflow: 0%;
+  margin: 0;
+  padding: 0;
+  overflow: 0;
 }
 li {
   float: left;
 }
 li a {
   display: block;
-  color: blue;
+  color:rgb(230, 43, 10);
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-family: 'Times New Roman', Times, serif;
+  text-transform: uppercase;
 }
-li a:hover {
-  background: rgb(77, 77, 77);
+li a:hover{
+  background:#4BA8FA;
   color: black;
+} 
+.imgEstudo {
+    position: absolute;
+    width: 90%;
+    height: 120px;
+    background: #ade0e2;
+    top: 45px;
+    left: 0;
+    margin: 20px;
+    border-color: rgb(16, 190, 16);
+    border-width: 20px;
+    border-style: solid;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+}
+#aguia {
+   width: 20%;
+}
+.rodape {
+   position: absolute;
+   bottom: 0;
+   width: 100%;
+   height: 50px;
+   background: #0d7dfd;
+   color:#030303;
+   left: 0;
+   display: flex;
+   justify-content: center;
+   font-size: 26px;
+   font-family: 'Times New Roman', Times, serif;
+}
+.conteudo {
+  position: absolute;
+  top: 45px;
 }
