--- a/estilo.css
+++ b/estilo.css
@@ -78,3 +78,10 @@ li a:hover{
   position: absolute;
   top: 45px;
 }
+.vingadores2 {
+  position: absolute;
+  width: 90%;
+  height:50%;
+  top: 0;
+  
+}
